change: create SocialLinks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,8 @@ import { Image } from 'astro:assets'
 
 import Portrait from '@/assets/portrait.jpg'
 
-import { Button } from '@/components/ui/button'
 import { AspectRatio } from '@/components/ui/aspect-ratio'
-import { Icons } from '@/components/Icons'
+import SocialLinks from '@/components/SocialLinks.astro'
 ---
 
 <BaseLayout
@@ -60,118 +59,7 @@ import { Icons } from '@/components/Icons'
                 "If we'll ever be remembered, I know it'll be for the way that
                 we love."
               </blockquote>
-              <div class="mt-6 flex flex-wrap items-center">
-                <a
-                  aria-label="Me on GitHub"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://github.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.github className="h-6 w-6" />
-                    <span class="sr-only">GitHub</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on YouTube"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://www.youtube.com/@torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.youtube className="h-6 w-6" />
-                    <span class="sr-only">YouTube</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on Facebook"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://facebook.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.facebook className="h-6 w-6" />
-                    <span class="sr-only">Facebook</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on Instagram"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://instagram.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.instagram className="h-6 w-6" />
-                    <span class="sr-only">Instagram</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on X"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://twitter.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.X className="h-6 w-6" />
-                    <span class="sr-only">X</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on LinkedIn"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://linkedin.com/in/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.linkedin className="h-6 w-6" />
-                    <span class="sr-only">LinkedIn</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on Reddit"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://reddit.com/user/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.reddit className="h-6 w-6" />
-                    <span class="sr-only">Reddit</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on Pinterest"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://pinterest.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.pinterest className="h-6 w-6" />
-                    <span class="sr-only">Pinterest</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on SoundCloud"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://soundcloud.com/torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.soundcloud className="h-6 w-6" />
-                    <span class="sr-only">SoundCloud</span>
-                  </Button>
-                </a>
-                <a
-                  aria-label="Me on Mastodon"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://mstdn.social/@torn4dom4n"
-                >
-                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icons.mastodon className="h-6 w-6" />
-                    <span class="sr-only">SoundCloud</span>
-                  </Button>
-                </a>
-              </div>
+              <SocialLinks />
             </div>
           </div>
         </div>
