--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -5,7 +5,18 @@ import { Icons } from '@/components/Icons'
 
 <div class="mt-6 flex flex-wrap items-center">
   <a
-    aria-label="Nhat Nguyen on GitHub"
+    aria-label="Nhat Nguyen's Gmail"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="mailto:torn4dom4n@gmail.com"
+  >
+    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
+      <Icons.gmail className="h-6 w-6" />
+      <span class="sr-only">Gmail</span>
+    </Button>
+  </a>
+  <a
+    aria-label="Nhat Nguyen's GitHub"
     target="_blank"
     rel="noopener noreferrer"
     href="https://github.com/torn4dom4n"
@@ -16,7 +27,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on YouTube"
+    aria-label="Nhat Nguyen's YouTube"
     target="_blank"
     rel="noopener noreferrer"
     href="https://www.youtube.com/@torn4dom4n"
@@ -27,7 +38,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on Facebook"
+    aria-label="Nhat Nguyen's Facebook"
     target="_blank"
     rel="noopener noreferrer"
     href="https://facebook.com/torn4dom4n"
@@ -38,7 +49,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on Instagram"
+    aria-label="Nhat Nguyen's Instagram"
     target="_blank"
     rel="noopener noreferrer"
     href="https://instagram.com/torn4dom4n"
@@ -49,7 +60,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on X"
+    aria-label="Nhat Nguyen's X"
     target="_blank"
     rel="noopener noreferrer"
     href="https://twitter.com/torn4dom4n"
@@ -60,7 +71,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on LinkedIn"
+    aria-label="Nhat Nguyen's LinkedIn"
     target="_blank"
     rel="noopener noreferrer"
     href="https://linkedin.com/in/torn4dom4n"
@@ -71,7 +82,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on Reddit"
+    aria-label="Nhat Nguyen's Reddit"
     target="_blank"
     rel="noopener noreferrer"
     href="https://reddit.com/user/torn4dom4n"
@@ -82,7 +93,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on Pinterest"
+    aria-label="Nhat Nguyen's Pinterest"
     target="_blank"
     rel="noopener noreferrer"
     href="https://pinterest.com/torn4dom4n"
@@ -93,7 +104,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on SoundCloud"
+    aria-label="Nhat Nguyen's SoundCloud"
     target="_blank"
     rel="noopener noreferrer"
     href="https://soundcloud.com/torn4dom4n"
@@ -104,7 +115,7 @@ import { Icons } from '@/components/Icons'
     </Button>
   </a>
   <a
-    aria-label="Nhat Nguyen on Mastodon"
+    aria-label="Nhat Nguyen's Mastodon"
     target="_blank"
     rel="noopener noreferrer"
     href="https://mstdn.social/@torn4dom4n"
