--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
+import HeadSEO from '@/components/HeadSEO.astro'
 import Footer from '@/components/Footer.astro'
 import Header from '@/components/Header.astro'
-import MainHead from '@/components/MainHead.astro'
 import ThemeProvider from '@/components/ThemeProvider.astro'
 
 interface Props {
@@ -15,7 +15,7 @@ const { title, description, ogImage } = Astro.props
 
 <html lang="en">
   <head>
-    <MainHead title={title} description={description} ogImage={ogImage} />
+    <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ThemeProvider />
   </head>
   <body class="flex h-full flex-col bg-background font-sans antialiased">
