--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -23,8 +23,16 @@ const { title, description, ogImage } = Astro.props
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
-<link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
+<link
+  rel="shortcut icon"
+  type="image/svg+xml"
+  href={`${canonicalURL}favicon.svg`}
+/>
+<link
+  rel="sitemap"
+  type="application/xml"
+  href={`${canonicalURL}sitemap-index.xml`}
+/>
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
@@ -43,14 +51,14 @@ const { title, description, ogImage } = Astro.props
 
 <link
   rel="preload"
-  href="/fonts/Mona-Sans.woff2"
+  href={`${canonicalURL}fonts/Mona-Sans.woff2`}
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/Hubot-Sans.woff2"
+  href={`${canonicalURL}fonts/Hubot-Sans.woff2`}
   as="font"
   type="font/woff2"
   crossorigin
