feat: 404 - go back home

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear()
 ---
 
-<footer class="mt-16">
+<footer class="mt-16 flex-none">
   <div class="sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
       <div class="border-t py-8">
