--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -26,12 +26,12 @@ const { title, description, ogImage } = Astro.props
 <link
   rel="shortcut icon"
   type="image/svg+xml"
-  href={`${canonicalURL}favicon.svg`}
+  href={`${Astro.site}favicon.svg`}
 />
 <link
   rel="sitemap"
   type="application/xml"
-  href={`${canonicalURL}sitemap-index.xml`}
+  href={`${Astro.site}sitemap-index.xml`}
 />
 <title>{title}</title>
 <meta name="title" content={title} />
@@ -51,14 +51,14 @@ const { title, description, ogImage } = Astro.props
 
 <link
   rel="preload"
-  href={`${canonicalURL}fonts/Mona-Sans.woff2`}
+  href={`${Astro.site}fonts/Mona-Sans.woff2`}
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href={`${canonicalURL}fonts/Hubot-Sans.woff2`}
+  href={`${Astro.site}fonts/Hubot-Sans.woff2`}
   as="font"
   type="font/woff2"
   crossorigin
