--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,20 +1,24 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout.astro'
+
+import { buttonVariants } from '@/components/ui/button'
 ---
 
 <BaseLayout title="Not Found" description="404 Error — this page was not found">
-  <div class="flex h-screen flex-col items-center justify-center text-center">
-    <div class="relative">
+  <div class="flex h-96 flex-col items-center justify-center text-center">
+    <div class="flex flex-col items-center">
+      <p class="text-sm text-muted-foreground">404</p>
       <h1
-        class="m-0 mr-5 inline-block border-r border-solid py-0 pl-0 pr-[23px] align-top font-heading text-2xl leading-[49px]"
+        class="scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl"
       >
-        404
+        Page not found
       </h1>
-      <div class="inline-block h-[49px] text-left align-middle leading-[49px]">
-        <h2 class="m-0 p-0 text-sm leading-[49px]">
-          This page could not be found.
-        </h2>
-      </div>
+      <p class="mb-4 leading-7 [&:not(:first-child)]:mt-6">
+        Sorry, we couldn't find the page you're looking for.
+      </p>
+      <a href="/" target="_blank" rel="noreferrer" class={buttonVariants()}>
+        Go back home
+      </a>
     </div>
   </div>
 </BaseLayout>
