--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,9 +5,7 @@ import { buttonVariants } from '@/components/ui/button'
 ---
 
 <BaseLayout title="Not Found" description="404 Error — this page was not found">
-  <div
-    class="mt-16 flex h-96 flex-col items-center justify-center text-center sm:mt-32"
-  >
+  <div class="flex h-[26rem] flex-col items-center justify-center text-center">
     <div class="flex flex-col items-center">
       <p class="text-sm text-muted-foreground">404</p>
       <h1
