--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,9 +16,7 @@ import { buttonVariants } from '@/components/ui/button'
       <p class="mb-4 leading-7 [&:not(:first-child)]:mt-6">
         Sorry, we couldn't find the page you're looking for.
       </p>
-      <a href="/" target="_blank" rel="noreferrer" class={buttonVariants()}>
-        Go back home
-      </a>
+      <a href="/" rel="noreferrer" class={buttonVariants()}> Go back home</a>
     </div>
   </div>
 </BaseLayout>
