--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,54 +14,52 @@ import portraitImage from '@/assets/portrait.jpg'
   description="Welcome to Long Nhat Nguyen's website"
 >
   <div class="mt-16 sm:mt-32 sm:px-8">
-    <div class="mx-auto max-w-7xl lg:px-8">
-      <div class="relative px-4 sm:px-8 lg:px-12">
-        <div class="mx-auto max-w-2xl lg:max-w-5xl">
-          <div
-            class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:grid-rows-1 lg:gap-y-12"
-          >
-            <div class="lg:pl-20">
-              <div class="max-w-xs px-2.5 lg:max-w-none">
-                <AspectRatio ratio={1 / 1}>
-                  <Image
-                    src={portraitImage}
-                    width={1024}
-                    height={1024}
-                    sizes="(min-width: 1320px) 412px, (min-width: 1060px) calc(39.17vw - 97px), (min-width: 400px) 295px, calc(65vw + 53px)"
-                    alt="My name is Long Nhat Nguyen"
-                    class="rotate-3 rounded-2xl object-cover"
-                  />
-                </AspectRatio>
-              </div>
+    <div class="px-4 sm:px-8 lg:px-12">
+      <div class="mx-auto max-w-2xl lg:max-w-5xl">
+        <div
+          class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:grid-rows-1 lg:gap-y-12"
+        >
+          <div class="lg:pl-20">
+            <div class="max-w-xs px-2.5 lg:max-w-none">
+              <AspectRatio ratio={1 / 1}>
+                <Image
+                  src={portraitImage}
+                  width={1024}
+                  height={1024}
+                  sizes="(min-width: 1320px) 412px, (min-width: 1060px) calc(39.17vw - 97px), (min-width: 400px) 295px, calc(65vw + 53px)"
+                  alt="My name is Long Nhat Nguyen"
+                  class="rotate-3 rounded-2xl object-cover"
+                />
+              </AspectRatio>
             </div>
-            <div class="lg:order-first lg:row-span-2">
-              <h1
-                class="scroll-m-20 py-3 font-heading text-4xl font-extrabold tracking-tight lg:text-5xl"
+          </div>
+          <div class="lg:order-first lg:row-span-2">
+            <h1
+              class="scroll-m-20 py-3 font-heading text-4xl font-extrabold tracking-tight lg:text-5xl"
+            >
+              <span
+                class="bg-gradient-to-br from-amber-300 via-orange-500 to-yellow-400 bg-clip-text text-transparent"
               >
-                <span
-                  class="bg-gradient-to-br from-amber-300 via-orange-500 to-yellow-400 bg-clip-text text-transparent"
-                >
-                  Hello humans,
-                </span> my name is
-                <span
-                  class="bg-gradient-to-bl from-blue-300 via-sky-500 to-cyan-400 bg-clip-text text-transparent"
-                >
-                  Long Nhat Nguyen
-                </span>
-              </h1>
-              <p class="leading-7 [&:not(:first-child)]:mt-6">
-                Music and photography have always been my passions, filling my
-                life with joy and creativity. Recently, I have discovered an
-                interest in programming that has captivated me. Although my
-                knowledge in programming is limited, I find great enjoyment in
-                exploring this fascinating field.
-              </p>
-              <blockquote class="mt-6 italic">
-                "If we'll ever be remembered, I know it'll be for the way that
-                we love."
-              </blockquote>
-              <SocialLinks />
-            </div>
+                Hello humans,
+              </span> my name is
+              <span
+                class="bg-gradient-to-bl from-blue-300 via-sky-500 to-cyan-400 bg-clip-text text-transparent"
+              >
+                Long Nhat Nguyen
+              </span>
+            </h1>
+            <p class="leading-7 [&:not(:first-child)]:mt-6">
+              Music and photography have always been my passions, filling my
+              life with joy and creativity. Recently, I have discovered an
+              interest in programming that has captivated me. Although my
+              knowledge in programming is limited, I find great enjoyment in
+              exploring this fascinating field.
+            </p>
+            <blockquote class="mt-6 italic">
+              "If we'll ever be remembered, I know it'll be for the way that we
+              love."
+            </blockquote>
+            <SocialLinks />
           </div>
         </div>
       </div>
