--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,19 +4,20 @@ import BaseLayout from '@/layouts/BaseLayout.astro'
 import { buttonVariants } from '@/components/ui/button'
 ---
 
-<BaseLayout title="Not Found" description="404 Error — this page was not found">
-  <div class="flex h-[26rem] flex-col items-center justify-center text-center">
-    <div class="flex flex-col items-center">
-      <p class="text-sm text-muted-foreground">404</p>
-      <h1
-        class="scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl"
-      >
-        Page not found
-      </h1>
-      <p class="mb-4 leading-7 [&:not(:first-child)]:mt-6">
-        Sorry, we couldn't find the page you're looking for.
-      </p>
-      <a href="/" rel="noreferrer" class={buttonVariants()}> Go back home</a>
-    </div>
+<BaseLayout
+  title="404 | Long Nhat Nguyen"
+  description="404 Error — this page was not found"
+>
+  <div
+    class="mt-44 flex flex-col items-center justify-center text-center sm:mt-32"
+  >
+    <p class="text-sm text-muted-foreground">404</p>
+    <h1 class="scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl">
+      Page not found
+    </h1>
+    <p class="mb-4 leading-7 [&:not(:first-child)]:mt-6">
+      Sorry, we couldn't find the page you're looking for.
+    </p>
+    <a href="/" rel="noreferrer" class={buttonVariants()}> Go back home</a>
   </div>
 </BaseLayout>
