--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import portraitImage from '@/assets/portrait.jpg'
   title="Long Nhat Nguyen | Website"
   description="Welcome to Long Nhat Nguyen's website"
 >
-  <div class="mt-16 sm:mt-32 sm:px-8">
+  <div class="mt-4 sm:px-8">
     <div class="px-4 sm:px-8 lg:px-12">
       <div class="mx-auto max-w-2xl lg:max-w-5xl">
         <div
