feat: get site's config

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -2,6 +2,8 @@
 import '@/styles/globals.css'
 import '@/styles/fonts.css'
 
+import { siteConfig } from '@/config'
+
 interface Props {
   title?: string | undefined
   description?: string | undefined
@@ -11,7 +13,7 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
 if (Astro.props.ogImage === undefined) {
-  Astro.props.ogImage = new URL('og-image.jpg', Astro.site)
+  Astro.props.ogImage = siteConfig.ogImage
 }
 
 const { title, description, ogImage } = Astro.props
