--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,16 +3,15 @@ import { Image } from 'astro:assets'
 
 import BaseLayout from '@/layouts/BaseLayout.astro'
 
+import { siteConfig } from '@/config'
+
 import { AspectRatio } from '@/components/ui/aspect-ratio'
 import SocialLinks from '@/components/SocialLinks.astro'
 
 import portraitImage from '@/assets/portrait.jpg'
 ---
 
-<BaseLayout
-  title="Long Nhat Nguyen | Website"
-  description="Welcome to Long Nhat Nguyen's website"
->
+<BaseLayout title={siteConfig.name} description={siteConfig.description}>
   <div class="mt-4 sm:px-8">
     <div class="px-4 sm:px-8 lg:px-12">
       <div class="mx-auto max-w-2xl lg:max-w-5xl">
