--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -12,8 +12,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.email}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.gmail className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.gmail className="size-6" />
       <span class="sr-only">Gmail</span>
     </Button>
   </a>
@@ -23,8 +23,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.github}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.github className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.github className="size-6" />
       <span class="sr-only">GitHub</span>
     </Button>
   </a>
@@ -34,8 +34,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.youtube}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.youtube className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.youtube className="size-6" />
       <span class="sr-only">YouTube</span>
     </Button>
   </a>
@@ -45,8 +45,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.facebook}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.facebook className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.facebook className="size-6" />
       <span class="sr-only">Facebook</span>
     </Button>
   </a>
@@ -56,8 +56,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.instagram}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.instagram className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.instagram className="size-6" />
       <span class="sr-only">Instagram</span>
     </Button>
   </a>
@@ -67,8 +67,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.X}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.X className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.X className="size-6" />
       <span class="sr-only">X</span>
     </Button>
   </a>
@@ -78,8 +78,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.linkedin}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.linkedin className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.linkedin className="size-6" />
       <span class="sr-only">LinkedIn</span>
     </Button>
   </a>
@@ -89,8 +89,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.reddit}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.reddit className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.reddit className="size-6" />
       <span class="sr-only">Reddit</span>
     </Button>
   </a>
@@ -100,8 +100,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.pinterest}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.pinterest className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.pinterest className="size-6" />
       <span class="sr-only">Pinterest</span>
     </Button>
   </a>
@@ -111,8 +111,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.soundcloud}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.soundcloud className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.soundcloud className="size-6" />
       <span class="sr-only">SoundCloud</span>
     </Button>
   </a>
@@ -122,8 +122,8 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.mastodon}
   >
-    <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-      <Icons.mastodon className="h-6 w-6" />
+    <Button variant="ghost" size="icon" class="size-9 p-0">
+      <Icons.mastodon className="size-6" />
       <span class="sr-only">Mastodon</span>
     </Button>
   </a>
