--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,13 +18,13 @@ const { title, description, ogImage } = Astro.props
     <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ThemeProvider />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body class="min-h-dvh bg-background font-sans antialiased">
     <div class="fixed inset-0 flex justify-center sm:px-8">
       <div class="flex w-full max-w-7xl lg:px-8">
         <div class="w-full border bg-card"></div>
       </div>
     </div>
-    <div class="relative flex min-h-screen flex-col">
+    <div class="relative flex min-h-dvh flex-col">
       <Header />
       <main class="flex-auto">
         <slot />
