--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import portraitImage from '@/assets/portrait.jpg'
               </AspectRatio>
             </div>
           </div>
-          <div class="lg:order-first lg:row-span-2">
+          <div class="text-pretty lg:order-first lg:row-span-2">
             <h1
               class="scroll-m-20 py-3 font-heading text-4xl font-extrabold tracking-tight lg:text-5xl"
             >
