--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -5,14 +5,16 @@ import { Button } from '@/components/ui/button'
 import { Icons } from '@/components/Icons'
 ---
 
-<div class="mt-6 flex flex-wrap items-center">
+<div
+  class="mt-4 grid w-full grid-cols-4 justify-center gap-4 gap-y-4 md:grid-cols-8 lg:grid-cols-4"
+>
   <a
     aria-label="Nhat Nguyen's Gmail"
     target="_blank"
     rel="noopener noreferrer"
     href={siteConfig.links.email}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.gmail className="size-6" />
       <span class="sr-only">Gmail</span>
     </Button>
@@ -23,7 +25,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.github}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.github className="size-6" />
       <span class="sr-only">GitHub</span>
     </Button>
@@ -34,7 +36,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.youtube}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.youtube className="size-6" />
       <span class="sr-only">YouTube</span>
     </Button>
@@ -45,7 +47,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.facebook}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.facebook className="size-6" />
       <span class="sr-only">Facebook</span>
     </Button>
@@ -56,7 +58,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.instagram}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.instagram className="size-6" />
       <span class="sr-only">Instagram</span>
     </Button>
@@ -67,7 +69,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.X}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.X className="size-6" />
       <span class="sr-only">X</span>
     </Button>
@@ -78,7 +80,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.linkedin}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.linkedin className="size-6" />
       <span class="sr-only">LinkedIn</span>
     </Button>
@@ -89,7 +91,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.reddit}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.reddit className="size-6" />
       <span class="sr-only">Reddit</span>
     </Button>
@@ -100,7 +102,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.pinterest}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.pinterest className="size-6" />
       <span class="sr-only">Pinterest</span>
     </Button>
@@ -111,7 +113,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.soundcloud}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.soundcloud className="size-6" />
       <span class="sr-only">SoundCloud</span>
     </Button>
@@ -122,7 +124,7 @@ import { Icons } from '@/components/Icons'
     rel="noopener noreferrer"
     href={siteConfig.links.mastodon}
   >
-    <Button variant="ghost" size="icon" class="size-9 p-0">
+    <Button variant="ghost" size="icon" class="size-12 p-0">
       <Icons.mastodon className="size-6" />
       <span class="sr-only">Mastodon</span>
     </Button>
