--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,6 @@
 ---
 import HeadSEO from '@/components/HeadSEO.astro'
 import Header from '@/components/Header.astro'
-import Footer from '@/components/Footer.astro'
 import ThemeProvider from '@/components/ThemeProvider.astro'
 
 interface Props {
@@ -19,6 +18,7 @@ const { title, description, ogImage } = Astro.props
     <ThemeProvider />
   </head>
   <body class="min-h-dvh bg-background font-sans antialiased">
+    <Header />
     <slot />
   </body>
 </html>
