--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import About from '@/components/About.astro'
 import FindMe from '@/components/FindMe.astro'
 import Now from '@/components/Now.astro'
 import Location from '@/components/Location.astro'
-import Brands from '@/components/Brands.astro'
+import LogoCard from '@/components/LogoCard.astro'
 import Online from '@/components/Online.astro'
 import Contact from '@/components/Contact.astro'
 import Thanks from '@/components/Thanks.astro'
@@ -22,7 +22,7 @@ import { siteConfig } from '@/config'
       <FindMe />
       <Now />
       <Location />
-      <Brands />
+      <LogoCard />
       <Online />
       <Contact />
       <Thanks />
