about and footer

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -15,7 +15,6 @@ import Avatar from '@/assets/avatar.jpg'
         class="size-12 rounded-full"
       />
       <p class="text-sm font-semibold leading-6 text-primary">
-        <span class="absolute inset-0"></span>
         Long Nhat Nguyen
       </p>
     </div>
@@ -26,12 +25,12 @@ import Avatar from '@/assets/avatar.jpg'
     >
       Hello humans,
     </p>
-    <p class="mt-4 text-sm font-light lg:text-xl">
-      My name is Long Nhat Nguyen. Music and photography have always been my
-      passions, filling my life with joy and creativity. Recently, I have
-      discovered an interest in programming that has captivated me. Although my
-      knowledge in programming is limited, I find great enjoyment in exploring
-      this fascinating field.
+    <p class="mt-4 text-sm font-light text-muted-foreground lg:text-xl">
+      My name is Long Nhat Nguyen. I'm only an individual who loves music,
+      photography, tech, and nature.
+      <br />
+      <br />
+      I'd like to make a positive impact in this world, no matter how small.
     </p>
   </CardContent>
 </Card>
