--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,6 @@
 ---
+const currentYear = new Date().getFullYear()
+
 import { Card, CardContent, CardFooter } from '@/components/ui/card'
 ---
 
@@ -8,10 +10,12 @@ import { Card, CardContent, CardFooter } from '@/components/ui/card'
   <CardContent
     className="text-xl font-medium tracking-tight text-primary md:text-3xl"
   >
-    If We'll Ever Be Remembered I Hope It'll Be For The Way That We Love Life
-    Gets Better, We're Together And One Day We'll Smile Looking Down From Above
-    I Guess We'll Never Know When Our Time Will Come But If We'll Ever Be
-    Remembered I Know It'll Be For The Way That We Love
+    If we'll ever be remembered I hope it'll be for the way that we love.
+    <br />
+    <br />
+    Life gets better, we're together and one day we'll smile looking down from above.
   </CardContent>
-  <CardFooter className="mt-4 text-primary">Long Nhat Nguyen</CardFooter>
+  <CardFooter className="mt-4 text-primary">
+    &copy; {currentYear} Long Nhat Nguyen
+  </CardFooter>
 </Card>
