--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -17,7 +17,7 @@ import RealLove from '@/assets/real-love-martingarrix-lloyiso.jpg'
 >
   <CardHeader>
     <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
-      Now
+      Gallery
     </CardTitle>
     <CardDescription className="mt-4 text-sm">
       Music has always been a constant source of inspiration in my life. It has
