--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import BaseLayout from '@/layouts/BaseLayout.astro'
 import About from '@/components/About.astro'
 import FindMe from '@/components/FindMe.astro'
-import Now from '@/components/Now.astro'
-import Location from '@/components/Location.astro'
+import Gallery from '@/components/Gallery.astro'
+import Playing from '@/components/Playing.astro'
 import LogoCard from '@/components/LogoCard.astro'
 import Online from '@/components/Online.astro'
 import Contact from '@/components/Contact.astro'
@@ -20,8 +20,8 @@ import { siteConfig } from '@/config'
     >
       <About />
       <FindMe />
-      <Now />
-      <Location />
+      <Gallery />
+      <Playing />
       <LogoCard />
       <Online />
       <Contact />
