--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -19,12 +19,11 @@ import {
     </CardTitle>
     <CardDescription className="mt-4 text-sm"> Let's go. </CardDescription>
   </CardHeader>
-  <CardContent>
+  <CardContent className="sm:pt-8">
     <iframe
-      style="border-radius:12px"
+      class="h-96 rounded-xl sm:h-lvh"
       src="https://open.spotify.com/embed/album/45gsxfnJ5Nt2RZp82SQenc?utm_source=generator&theme=0"
       width="100%"
-      height="400"
       allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
       loading="lazy"
