--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import FindMe from '@/components/FindMe.astro'
 import Gallery from '@/components/Gallery.astro'
 import Playing from '@/components/Playing.astro'
 import LogoCard from '@/components/LogoCard.astro'
-import Online from '@/components/Online.astro'
+import Projects from '@/components/Projects.astro'
 import Contact from '@/components/Contact.astro'
 import Thanks from '@/components/Thanks.astro'
 import Footer from '@/components/Footer.astro'
@@ -23,7 +23,7 @@ import { siteConfig } from '@/config'
       <Gallery />
       <Playing />
       <LogoCard />
-      <Online />
+      <Projects />
       <Contact />
       <Thanks />
       <Footer />
