--- a/src/components/Playing.astro
+++ b/src/components/Playing.astro
@@ -21,6 +21,7 @@ import {
   </CardHeader>
   <CardContent className="sm:pt-8">
     <iframe
+      title="Spotify"
       class="h-96 rounded-xl sm:h-lvh"
       src="https://open.spotify.com/embed/album/45gsxfnJ5Nt2RZp82SQenc?utm_source=generator&theme=0"
       width="100%"
