--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Playing from '@/components/Playing.astro'
 import LogoCard from '@/components/LogoCard.astro'
 import Projects from '@/components/Projects.astro'
 import Contact from '@/components/Contact.astro'
-import Thanks from '@/components/Thanks.astro'
+import Lyrics from '@/components/Lyrics.astro'
 import Footer from '@/components/Footer.astro'
 
 import { siteConfig } from '@/config'
@@ -25,7 +25,7 @@ import { siteConfig } from '@/config'
       <LogoCard />
       <Projects />
       <Contact />
-      <Thanks />
+      <Lyrics />
       <Footer />
     </div>
   </main>
