--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,12 @@
 ---
 const currentYear = new Date().getFullYear()
 
-import { Card, CardContent, CardFooter } from '@/components/ui/card'
+import { Card, CardFooter } from '@/components/ui/card'
 ---
 
 <Card
-  className="flex h-full flex-col justify-between p-8 lg:col-span-2 lg:row-span-2 xl:col-span-1"
+  className="flex h-full flex-col justify-end p-8 lg:col-span-2 lg:row-span-2 xl:col-span-1"
 >
-  <CardContent
-    className="text-xl font-medium tracking-tight text-primary md:text-3xl"
-  >
-    If we'll ever be remembered I hope it'll be for the way that we love.
-    <br />
-    <br />
-    Life gets better, we're together and one day we'll smile looking down from above.
-  </CardContent>
   <CardFooter className="mt-4 text-primary">
     &copy; {currentYear} Long Nhat Nguyen
   </CardFooter>
