--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,7 +11,7 @@ import projectsImage from '@/assets/projects.jpg'
     <CardTitle className="-mr-24">
       <Image
         src={projectsImage}
-        class="bg-tertiary h-64 w-full rounded-2xl object-cover ring-1 ring-primary/5 dark:ring-white/10 lg:h-auto"
+        class="bg-tertiary h-64 w-full rounded-2xl object-cover ring-1 ring-primary/5 lg:h-auto"
         alt="Projects"
       />
     </CardTitle>
@@ -24,9 +24,8 @@ import projectsImage from '@/assets/projects.jpg'
       <div class="flex flex-wrap pt-8">
         <div class="flex items-center text-sm font-medium text-primary">
           <svg
-            class="size-14 flex-none stroke-current"
+            class="size-14 flex-none fill-black stroke-current dark:fill-[#F8F8F8]"
             viewBox="0 0 500 500"
-            fill="#F8F8F8"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
@@ -43,9 +42,35 @@ import projectsImage from '@/assets/projects.jpg'
         </div>
         <div class="ml-1 flex items-center text-sm font-medium text-primary">
           <svg
-            class="size-12 flex-none stroke-current"
+            class="size-12 flex-none fill-black stroke-current dark:fill-[#FCFCFC]"
+            viewBox="0 0 500 500"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="m362.55 325.84c-25.115 4.58e-4 -49.778-0.13339-74.437 0.11487-4.8574 0.048889-7.5626-1.6498-9.8969-5.7389-17.134-30.014-34.446-59.927-51.716-89.864-0.89276-1.5476-1.9089-3.024-3.3752-5.3327-15.113 26.14-29.841 51.615-45.172 78.134 4.4274 0 7.8026-0.038086 11.177 0.008728 5.3253 0.073822 10.658 0.057038 15.972 0.35526 4.7771 0.26804 8.0456-1.1442 10.46-5.7034 5.0529-9.5404 10.672-18.782 16.103-28.12 0.88625-1.5238 2.0007-2.9149 3.2756-4.7503 3.2933 5.0612 6.3689 9.4972 9.1364 14.118 3.151 5.2606 2.2827 10.517-0.70233 15.58-5.3144 9.0141-10.463 18.136-16.111 26.936-1.2837 2-4.3123 4.0565-6.56 4.0814-25.658 0.28473-51.32 0.18811-76.982 0.15476-1.1047-0.001435-2.2089-0.37656-4.162-0.73209 27.869-48.271 55.452-96.047 83.465-144.57 1.941 3.0767 3.5715 5.4748 5.0166 7.9799 21.338 36.99 42.673 73.982 63.928 111.02 1.4915 2.599 3.1599 3.7768 6.2805 3.7129 9.8003-0.20047 19.607-0.07373 30.281-0.07373-15.144-26.262-29.955-51.946-45.111-78.23-3.9647 6.647-7.7177 12.939-11.716 19.642-3.815-6.1317-7.7293-11.665-10.742-17.651-1.1503-2.2859-1.2897-6.1962-0.086212-8.3656 6.6899-12.059 13.928-23.813 21.009-35.654 0.3186-0.53268 0.93668-0.88623 1.911-1.7759 27.678 47.915 55.215 95.585 83.019 143.72-1.6902 0.44406-2.7508 0.72272-4.2652 1.0018z"
+            ></path>
+            <path
+              d="m82.284 126v-43.28h105.38v22.743h-82.207v82.273h-23.174c0-20.37 0-40.804 7e-6 -61.737z"
+            ></path>
+            <path
+              d="m374 105.53c-20.137-2.3e-5 -39.774-2.3e-5 -59.724-2.3e-5v-22.855h105.03v104.98h-22.505v-82.129c-7.7664 0-15.036 0-22.805-1.5e-5z"
+            ></path>
+            <path
+              d="m82.284 328.01v-13.734h23.043v82.089h82.463v23.01h-105.51c0-30.371 0-60.619 7e-6 -91.365z"
+            ></path>
+            <path
+              d="m372 419.64h-57.719v-23.045h82.138v-82.388h23.023v105.43c-15.738 0-31.34 0-47.442-3e-5z"
+            ></path>
+            <path
+              d="m119.61 151.35c-6.4814-7.6622-7.5668-16.765-3.1804-24.768 4.2475-7.7489 12.296-11.644 21.887-10.591 7.8693 0.86338 14.864 7.1124 17.164 15.334 2.4964 8.9247-1.1196 18.119-9.1796 23.34-8.531 5.5269-17.461 4.4942-26.691-3.3152z"
+              fill="#FD0000"></path>
+          </svg>
+          <span class="ml-2.5">Microlens</span>
+        </div>
+        <div class="ml-1 flex items-center text-sm font-medium text-primary">
+          <svg
+            class="size-12 flex-none fill-[#228C22] stroke-current"
             viewBox="0 0 1080 1080"
-            fill="#228C22"
             xmlns="http://www.w3.org/2000/svg"
           >
             <g transform="matrix(2.34 0 0 2.34 576.81 520.66)">
@@ -56,33 +81,6 @@ import projectsImage from '@/assets/projects.jpg'
             </g>
           </svg>
           <span class="ml-2.5">MedPocket</span>
-        </div>
-        <div class="ml-1 flex items-center text-sm font-medium text-primary">
-          <svg
-            class="size-12 flex-none stroke-current"
-            viewBox="0 0 500 500"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="m362.55 325.84c-25.115 4.58e-4 -49.778-0.13339-74.437 0.11487-4.8574 0.048889-7.5626-1.6498-9.8969-5.7389-17.134-30.014-34.446-59.927-51.716-89.864-0.89276-1.5476-1.9089-3.024-3.3752-5.3327-15.113 26.14-29.841 51.615-45.172 78.134 4.4274 0 7.8026-0.038086 11.177 0.008728 5.3253 0.073822 10.658 0.057038 15.972 0.35526 4.7771 0.26804 8.0456-1.1442 10.46-5.7034 5.0529-9.5404 10.672-18.782 16.103-28.12 0.88625-1.5238 2.0007-2.9149 3.2756-4.7503 3.2933 5.0612 6.3689 9.4972 9.1364 14.118 3.151 5.2606 2.2827 10.517-0.70233 15.58-5.3144 9.0141-10.463 18.136-16.111 26.936-1.2837 2-4.3123 4.0565-6.56 4.0814-25.658 0.28473-51.32 0.18811-76.982 0.15476-1.1047-0.001435-2.2089-0.37656-4.162-0.73209 27.869-48.271 55.452-96.047 83.465-144.57 1.941 3.0767 3.5715 5.4748 5.0166 7.9799 21.338 36.99 42.673 73.982 63.928 111.02 1.4915 2.599 3.1599 3.7768 6.2805 3.7129 9.8003-0.20047 19.607-0.07373 30.281-0.07373-15.144-26.262-29.955-51.946-45.111-78.23-3.9647 6.647-7.7177 12.939-11.716 19.642-3.815-6.1317-7.7293-11.665-10.742-17.651-1.1503-2.2859-1.2897-6.1962-0.086212-8.3656 6.6899-12.059 13.928-23.813 21.009-35.654 0.3186-0.53268 0.93668-0.88623 1.911-1.7759 27.678 47.915 55.215 95.585 83.019 143.72-1.6902 0.44406-2.7508 0.72272-4.2652 1.0018z"
-              fill="#FCFCFC"></path>
-            <path
-              d="m82.284 126v-43.28h105.38v22.743h-82.207v82.273h-23.174c0-20.37 0-40.804 7e-6 -61.737z"
-              fill="#FCFCFC"></path>
-            <path
-              d="m374 105.53c-20.137-2.3e-5 -39.774-2.3e-5 -59.724-2.3e-5v-22.855h105.03v104.98h-22.505v-82.129c-7.7664 0-15.036 0-22.805-1.5e-5z"
-              fill="#FCFCFC"></path>
-            <path
-              d="m82.284 328.01v-13.734h23.043v82.089h82.463v23.01h-105.51c0-30.371 0-60.619 7e-6 -91.365z"
-              fill="#FCFCFC"></path>
-            <path
-              d="m372 419.64h-57.719v-23.045h82.138v-82.388h23.023v105.43c-15.738 0-31.34 0-47.442-3e-5z"
-              fill="#FCFCFC"></path>
-            <path
-              d="m119.61 151.35c-6.4814-7.6622-7.5668-16.765-3.1804-24.768 4.2475-7.7489 12.296-11.644 21.887-10.591 7.8693 0.86338 14.864 7.1124 17.164 15.334 2.4964 8.9247-1.1196 18.119-9.1796 23.34-8.531 5.5269-17.461 4.4942-26.691-3.3152z"
-              fill="#FD0000"></path>
-          </svg>
-          <span class="ml-2.5">Microlens</span>
         </div>
       </div>
     </div>
